restaurant-yaml/restaurant-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restaurant-api
    env: development
  name: restaurant-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restaurant-api
  template:
    metadata:
      labels:
        app: restaurant-api
    spec:
      containers:
      - image: olaekdahl/restaurant-api:1.0
        name: restaurant-api
        ports:
        - containerPort: 9001
